<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/change_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_profile_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="14dp"
        android:hint="@string/old_password"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_change_password_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_password_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_profile_layout"
        android:layout_width="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="14dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_password_profile_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_profile_layout"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="14dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_password_profile_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/accept_change_password_button_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="@string/accept"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"

        app:cornerRadius="4dp"
        app:layout_constraintTop_toBottomOf="@id/repeat_password_profile_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>