<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageButton
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:contentDescription="@string/description_login"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_back"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/login_header"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_back"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_login_layout"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_login_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_login_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/registration_continue"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"

        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_layout"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_bicycles"
        android:id="@+id/login_bicycles"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/description_login"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_continue"/>

</androidx.constraintlayout.widget.ConstraintLayout>