<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:title="Профиль"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_profile_button"
            android:text="@string/save_string"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:layout_gravity="end"

            style="@style/Widget.MaterialComponents.Button.TextButton"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_profile_layout"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="14dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_progile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nick_profile_layout"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="14dp"
        android:layout_height="wrap_content"
        android:hint="@string/nick_string"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_profile_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nick_profile_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/change_password_button"
        android:text="@string/change_password"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="31dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:gravity="start"

        style="@style/Widget.MaterialComponents.Button.TextButton"

        app:layout_constraintTop_toBottomOf="@id/nick_profile_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_profile_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="18dp"
        android:backgroundTint="#B00020"
        android:fontFamily="sans-serif-medium"
        android:padding="12dp"
        android:text="@string/sign_out"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"

        app:cornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

