<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/registration_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:background="@null"
        android:contentDescription="@string/registration"
        android:minWidth="48dp"
        android:minHeight="48dp"

        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/registration_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_header"
                android:textSize="34sp"
                android:textStyle="bold"
                android:textColor="@color/black"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_login_layout"
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/login"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_login_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_password_layout"
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_login_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/registration_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_repeat_password_layout"
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/registration_repeat_password"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/registration_repeat_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_name_layout"
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/registration_name"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_repeat_password_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registration_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration_sex_layout"
                android:layout_width="0dp"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/registration_sex"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_name_layout">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/registration_sex_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registration_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="@string/registration_continue"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"

                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_sex_layout"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registration_agreement"
                android:text="@string/registration_agreement"
                android:layout_marginTop="15dp"
                android:textAlignment="center"
                android:textColorLink="@color/purple_700"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_continue"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_registration_activity"
                android:id="@+id/registration_activity"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/registration"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_agreement"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_registration_icon"
                android:id="@+id/registration_icon"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/registration"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registration_activity"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>